# toolchain-installer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
docs/: README.md  architecture.md  contract.md  docs-system-map.md  examples.md  roadmap.md  security.md
docs/architecture/: source-layout.md  system-boundaries.md  worker-gateway-placement.md
docs/contracts/: cli-surface.md  install-plan-contract.md
docs/guides/: installation-examples.md  python-toolchain-bootstrap.md
docs/operations/: external-gateway-integration.md  quality-and-doc-maintenance.md  security-boundaries.md
docs/plans/: delivery-roadmap.md  documentation-tech-debt.md
docs/references/: example-plan-files.md  source-selection-rules.md
examples/: go-plan.json  mypy-plan.json  nodejs-plan.json  python-plan.json  ruff-plan.json  rust-plan.json  uv-plan.json
fixtures/cargo-install-fixture/: Cargo.toml
fixtures/go-install-fixture/: go.mod
scripts/: install_smoke.py
src/: cli.rs  download_sources.rs  error.rs  github_release_metadata.rs  host_recipe.rs  installer_runtime_config.rs  lib.rs  lib_tests.rs  main.rs  plan_items.rs
src/application/: bootstrap_use_case.rs  execution_context.rs  install_plan_use_case.rs  mod.rs
src/artifact/: install_source.rs  mod.rs
src/bootstrap/: cli.rs  mod.rs
src/builtin_tools/: bootstrap_installation.rs  bootstrap_tool_health.rs  mod.rs  public_release_asset_installation.rs
src/contracts/: bootstrap_request.rs  bootstrap_result.rs  execution_request.rs  install_plan_contract.rs  install_source.rs  mod.rs
src/external_gateway/: asset_routing.rs  mod.rs
src/install_plan/: archive_tree_release_item_execution.rs  cargo_install_item_execution.rs  go_install_item_execution.rs  install_plan_validation.rs  item_destination_resolution.rs  item_method_dispatch.rs  mod.rs  npm_global_item_execution.rs  pip_item_execution.rs  plan_method.rs  release_item_execution.rs  resolved_plan_item.rs  rustup_component_item_execution.rs  system_package_item_execution.rs  workspace_package_item_execution.rs
src/installation/: archive_binary.rs  archive_tree.rs  mod.rs
src/managed_toolchain/: bootstrap_item_construction.rs  managed_destination_backup.rs  managed_environment_layout.rs  managed_python_executable_discovery.rs  managed_root_dir.rs  managed_uv_host_execution.rs  managed_uv_installation.rs  mod.rs  source_candidate_attempts.rs  uv_installation_source_candidates.rs  uv_public_release_installation.rs  uv_python_installation.rs  uv_tool_installation.rs  version_probe.rs
src/plan/: archive_tree_release_item_execution.rs  cargo_install_item_execution.rs  go_install_item_execution.rs  install_plan_execution.rs  install_plan_validation.rs  item_destination_resolution.rs  item_method_dispatch.rs  mod.rs  npm_global_item_execution.rs  pip_item_execution.rs  plan_method.rs  (+5 more)
tests/: docs_system.rs  e2e_cli.rs
worker/: README.md  index.js  index.test.js  package.json
(+20 files in other folders)
