[package]
name = "toolchain-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
xz2 = "0.1"
zip = "0.6"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
